Fixed the issue marked "TO DO" in the last commit. The pixel row and pixel column coordinates of the center of the tank were swapped, causing one of the fish to appear to be outside of the tank. This seems to be an old bug that needs to be fixed in cvtracer as well.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -94,14 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi', '../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi', '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi']\n"
+     ]
+    }
+   ],
    "source": [
+    "from glob import glob\n",
+    "\n",
     "tracking_dir = '../tracking'\n",
     "\n",
+    "input_files = glob('../raw_videos/*.avi')\n",
+    "print(input_files)\n",
+    "input_file  = input_files[2]\n",
     "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi'\n",
-    "input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi'\n",
+    "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi'\n",
     "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi'\n",
     "\n",
     "#==================================================\n",
@@ -111,9 +124,9 @@
     "import platform, os, sys, datetime, re\n",
     "from os.path import join\n",
     "from glob import glob\n",
-    "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
     "# sys.path.append(join(root_dir,'cvtracer'))\n",
     "from cvt.TrAQ.Trial import Trial\n",
     "from cvt.TrAQ.Tank import Tank\n",
@@ -164,7 +177,7 @@
     "\n",
     "    # Background subtraction (for naive background subtraction only).\n",
     "    bkg_frame_skip = 50    # Using every frame of the video to compute the background takes a while.\n",
-    "                           # Instead we only use one frame in bkg_frame_skip.\n",
+    "                           # Instead we only use one frame in bkg_frame_skip.tro\n",
     "    bkg_sub_amp    = 4     # Contrast amplification factor applied after background subtraction.\n",
     "\n",
     "    # Contour detection.\n",
@@ -256,77 +269,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "        Generating new Trial object.\n",
-      "\n",
-      "        Tank object loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
-      "2 individuals in trial\n",
-      "4\n",
-      "Using Gaussian Adaptive Threshold\n",
-      "Using Inverted Binary Threshold with [0, 100].\n",
-      " Group of 2\n",
-      "       Current tracking time: 00:01:08:30 \n",
-      "       Video capture released.\n",
-      "\n",
-      "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#==========================================================================\n",
-    "# Parameter tweaking area.\n",
+    "# #==========================================================================\n",
+    "# # Parameter tweaking area.\n",
     "\n",
-    "t_start,t_end = 60,70 # Times between which to track, in seconds.\n",
-    "n_pixel_blur  = 5     # square-root of n-pixels for threshold blurring\n",
-    "block_size    = 15    # contour block size\n",
-    "thresh_offset = 4     # threshold offset for contour-finding\n",
-    "min_area      = 40    # minimum area for threhold detection\n",
-    "max_area      = 100   # maximum area for threhold detection\n",
-    "online_viewer = True\n",
+    "# t_start,t_end = 60,70 # Times between which to track, in seconds.\n",
+    "# n_pixel_blur  = 5     # square-root of n-pixels for threshold blurring\n",
+    "# block_size    = 15    # contour block size\n",
+    "# thresh_offset = 4     # threshold offset for contour-finding\n",
+    "# min_area      = 40    # minimum area for threhold detection\n",
+    "# max_area      = 100   # maximum area for threhold detection\n",
+    "# online_viewer = True\n",
     "\n",
-    "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
-    "                            contour_color=(0,200,255), contour_thickness=1, \n",
-    "                            points=False, directors=False, timestamp=True)\n",
+    "# video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "#                             contour_color=(0,200,255), contour_thickness=1, \n",
+    "#                             points=False, directors=False, timestamp=True)\n",
     "\n",
-    "#==========================================================================\n",
-    "# Actual tracking.\n",
+    "# #==========================================================================\n",
+    "# # Actual tracking.\n",
     "\n",
-    "save_settings()\n",
+    "# save_settings()\n",
     "\n",
-    "trial = Trial()\n",
-    "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
-    "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
+    "# trial = Trial()\n",
+    "# trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "#            fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
-    "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "               threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
-    "               online=online_viewer)\n",
+    "# cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
+    "#                threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
+    "#                online=online_viewer)\n",
     "\n",
-    "try:\n",
-    "    cvt.set_frame(cvt.frame_start)\n",
-    "    for i_frame in range(cvt.frame_start, cvt.frame_end+1):\n",
-    "        if cvt.get_frame():\n",
-    "            cvt.mask_tank()\n",
-    "            cvt.detect_contours()\n",
-    "            cvt.analyze_contours()\n",
-    "            cvt.connect_frames()\n",
-    "            cvt.update_trial()\n",
-    "            cvt.draw(**video_output_options)\n",
-    "            cvt.write_frame()\n",
-    "            if not cvt.post_frame(delay=1):\n",
-    "                break\n",
-    "            cvt.print_current_frame()\n",
-    "    cvt.release()\n",
-    "    cvt.trial.save()\n",
-    "except:\n",
-    "    %tb\n",
-    "    cvt.release()"
+    "# try:\n",
+    "#     cvt.set_frame(cvt.frame_start)\n",
+    "#     for i_frame in range(cvt.frame_start, cvt.frame_end+1):\n",
+    "#         if cvt.get_frame():\n",
+    "#             cvt.mask_tank()\n",
+    "#             cvt.detect_contours()\n",
+    "#             cvt.analyze_contours()\n",
+    "#             cvt.connect_frames()\n",
+    "#             cvt.update_trial()\n",
+    "#             cvt.draw(**video_output_options)\n",
+    "#             cvt.write_frame()\n",
+    "#             if not cvt.post_frame(delay=1):\n",
+    "#                 break\n",
+    "#             cvt.print_current_frame()\n",
+    "#     cvt.release()\n",
+    "#     cvt.trial.save()\n",
+    "# except:\n",
+    "#     %tb\n",
+    "#     cvt.release()"
    ]
   },
   {
@@ -340,80 +333,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "        Generating new Trial object.\n",
-      "\n",
-      "        Tank object loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
-      "2 individuals in trial\n",
-      "Using MOG2 Background Subtraction\n",
-      "4\n",
-      "Using Gaussian Adaptive Threshold\n",
-      "Using Inverted Binary Threshold with [0, 100].\n",
-      " Group of 2\n",
-      "       Current tracking time: 00:01:05:03 \n",
-      "       Video capture released.\n",
-      "\n",
-      "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#==========================================================================\n",
-    "# Parameter tweaking area.\n",
+    "# #==========================================================================\n",
+    "# # Parameter tweaking area.\n",
     "\n",
-    "t_start,t_end = 60,65 # Times between which to track, in seconds.\n",
-    "n_pixel_blur  = 3     # square-root of n-pixels for threshold blurring\n",
-    "block_size    = 15    # contour block size\n",
-    "thresh_offset = 4     # threshold offset for contour-finding\n",
-    "min_area      = 30    # minimum area for threhold detection\n",
-    "max_area      = 150   # maximum area for threhold detection\n",
-    "online_viewer = True\n",
+    "# t_start,t_end = 60,65 # Times between which to track, in seconds.\n",
+    "# n_pixel_blur  = 3     # square-root of n-pixels for threshold blurring\n",
+    "# block_size    = 15    # contour block size\n",
+    "# thresh_offset = 4     # threshold offset for contour-finding\n",
+    "# min_area      = 30    # minimum area for threhold detection\n",
+    "# max_area      = 100   # maximum area for threhold detection\n",
+    "# online_viewer = True\n",
     "\n",
-    "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
-    "                            contour_color=(0,0,255), contour_thickness=1, \n",
-    "                            points=False, directors=False, timestamp=True)\n",
+    "# video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "#                             contour_color=(0,255,0), contour_thickness=1, \n",
+    "#                             points=False, directors=True, timestamp=True)\n",
     "\n",
-    "#==========================================================================\n",
-    "# Actual tracking.\n",
+    "# #==========================================================================\n",
+    "# # Actual tracking.\n",
     "\n",
-    "save_settings()\n",
+    "# save_settings()\n",
     "\n",
-    "trial = Trial()\n",
-    "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
-    "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
+    "# trial = Trial()\n",
+    "# trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "#            fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
-    "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "               threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
-    "               online=online_viewer, \n",
-    "               MOG2=True)\n",
+    "# cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
+    "#                threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
+    "#                online=online_viewer, \n",
+    "#                MOG2=True, MOG_history=10000, MOG_initial_skip=500,\n",
+    "#                MOG_varThreshold=35, MOG_learning_rate=0.001)\n",
     "\n",
-    "try:\n",
-    "    cvt.set_frame(cvt.frame_start)\n",
-    "    for i_frame in range(cvt.frame_start, cvt.frame_end+1):\n",
-    "        if cvt.get_frame():\n",
-    "            cvt.mask_tank()\n",
-    "            cvt.mask_background()\n",
-    "            cvt.detect_contours()\n",
-    "            cvt.analyze_contours()\n",
-    "            cvt.connect_frames()\n",
-    "            cvt.update_trial()\n",
-    "            cvt.draw(**video_output_options)\n",
-    "            cvt.write_frame()\n",
-    "            if not cvt.post_frame(delay=1):\n",
-    "                break\n",
-    "            cvt.print_current_frame()\n",
-    "    cvt.release()\n",
-    "    cvt.trial.save()\n",
-    "except:\n",
-    "    %tb\n",
-    "    cvt.release()\n",
+    "# try:\n",
+    "#     cvt.set_frame(cvt.frame_start)\n",
+    "#     cvt.init_live_preview()\n",
+    "#     for i_frame in range(cvt.frame_start, cvt.frame_end+1):\n",
+    "#         if cvt.get_frame():\n",
+    "#             cvt.mask_tank()\n",
+    "#             cvt.mask_background()\n",
+    "#             cvt.detect_contours()\n",
+    "#             cvt.analyze_contours()\n",
+    "#             cvt.connect_frames()\n",
+    "#             cvt.update_trial()\n",
+    "#             cvt.draw(**video_output_options)\n",
+    "#             cvt.write_frame()\n",
+    "#             if not cvt.post_frame(delay=1):\n",
+    "#                 break\n",
+    "#             cvt.print_current_frame()\n",
+    "#     cvt.release()\n",
+    "#     cvt.trial.save()\n",
+    "# except:\n",
+    "#     %tb\n",
+    "#     cvt.release()\n",
     "    \n"
    ]
   },
@@ -430,13 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0:00:14.529477\n",
       "Background obtained by averaging every 500th frame over the entire video:\n"
      ]
     },
@@ -540,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -572,8 +547,8 @@
     "n_pixel_blur  = 7     # square-root of n-pixels for threshold blurring\n",
     "block_size    = 15    # contour block size\n",
     "thresh_offset = 20    # threshold offset for contour-finding\n",
-    "min_area      = 20    # minimum area for threhold detection\n",
-    "max_area      = 90    # maximum area for threhold detection\n",
+    "min_area      = 25    # minimum area for threhold detection\n",
+    "max_area      = 60   # maximum area for threhold detection\n",
     "online_viewer = False\n",
     "\n",
     "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
@@ -621,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()"
    ]
   },
   {
