- Changed the way tracking settings are handled in "Track_Batch.ipynb" to make it easier to change them at the last moment when performing tracking tests. The notebook is now appropriate both for tracking many videos or conducting small scale tests. I'm keeping "Track.ipynb" around for now because it contains the MOG2 background subtraction test. - Removed the need to provide a date and a population name when creating a trial/group/cvtracer object. May need to propagate the change to, e.g., "Track.ipynb". - Added "opencv-contrib-python" to the conda environment. Not using it yet but contains additional background subtractions that I'd like to try in the future.

--- a/Corrupt_Videos.ipynb
+++ b/Corrupt_Videos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,33 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../raw_videos/broken/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000.avi',\n",
-       " '../raw_videos/broken/Pa_Fri_7dpf_GroupC_n2_2020-06-05-132924-0000.avi',\n",
-       " '../raw_videos/broken/Pa_Fri_7dpf_GroupC_n2b_2020-06-05-122929-0000.avi']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_GroupA_n2b_30FPS-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_GroupB_n2-0000-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_groupA_n5_15FPS.avi',\n",
-       " '../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi',\n",
-       " '../raw_videos/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi']"
+       "['../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110931-0000.avi',\n",
+       " '../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110941-0000.avi',\n",
+       " '../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi',\n",
+       " '../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi',\n",
+       " '../raw_videos/SF_Sat_14dpf_GroupA_n2b_2020-06-13-110452-0000.avi',\n",
+       " '../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi']"
       ]
      },
      "metadata": {},
@@ -50,11 +35,19 @@
     }
    ],
    "source": [
-    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
-    "input_files = sorted(glob('../raw_videos/broken/*.avi'))\n",
-    "display(input_files)\n",
+    "# input_files = sorted(glob('../raw_videos/broken/*.avi'))\n",
+    "# display(input_files)\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "# display(input_files)\n",
+    "\n",
+    "# Only files that haven't been tracked yet.\n",
+    "input_files = []\n",
+    "for f in sorted(glob('../raw_videos/*.avi')):\n",
+    "    name = os.path.splitext(os.path.basename(f))[0]\n",
+    "    trial_file = f'../tracking/full/{name}/trial.pik'\n",
+    "    if not os.path.exists(trial_file):\n",
+    "        input_files.append(f)\n",
     "display(input_files)"
    ]
   },
@@ -110,61 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi\n",
-      "34600/34663\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110931-0000.avi\n",
+      "0/31\n",
       "Done\n",
       "\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi\n",
-      "16300/16362\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110941-0000.avi\n",
+      "0/19\n",
       "Done\n",
       "\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_30FPS-0000.avi\n",
-      "38400/38431\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi\n",
+      "39700/39720\n",
       "Done\n",
       "\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupB_n2-0000-0000.avi\n",
-      "\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n",
+      "47900/47901\n",
       "Done\n",
       "\n",
-      "../raw_videos/Pa_Fri_14dpf_groupA_n5_15FPS.avi\n",
-      "10900/15870\n",
-      "Couldn't read frame 10976.\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n2b_2020-06-13-110452-0000.avi\n",
+      "48200/48209\n",
       "Done\n",
       "\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
-      "34500/34541\n",
-      "Done\n",
-      "\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
-      "38100/38143\n",
-      "Done\n",
-      "\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
-      "37600/37636\n",
-      "Done\n",
-      "\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
-      "38200/38253\n",
-      "Done\n",
-      "\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
-      "37300/37359\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi\n",
+      "39700/39706\n",
       "Done\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "# Only files that haven't been tracked yet.\n",
+    "input_files = []\n",
+    "for f in sorted(glob('../raw_videos/*.avi')):\n",
+    "    name = os.path.splitext(os.path.basename(f))[0]\n",
+    "    trial_file = f'../tracking/full/{name}/trial.pik'\n",
+    "    if not os.path.exists(trial_file):\n",
+    "        input_files.append(f)\n",
     "\n",
-    "# input_file = input_files[-1]\n",
     "for input_file in input_files:\n",
     "    \n",
     "    print(input_file)\n",
