--- a/Track_Batch.ipynb
+++ b/Track_Batch.ipynb
@@ -21,38 +21,48 @@
     "from cvt.utils import *\n",
     "\n",
     "\n",
-    "settings_list = [ # trial settings\n",
-    "                  'input_file', 'tracking_dir', 'output_dir', \n",
-    "                  'new_input_file', 'bkg_file', 'tank_file', 'settings_file', \n",
-    "                  't_start', 't_end', 'tank_radius', \n",
-    "                  'bkg_frame_skip', 'bkg_sub_amp',\n",
-    "                  'n_pixel_blur', 'block_size', 'thresh_offset',\n",
-    "                  'min_area', 'max_area', 'RGB', \n",
-    "                  # tracking settings\n",
-    "                  'ext', 'filename', 'pop', 'age', 'group', 'Nfish', \n",
-    "                  'date', 'Nframes', 'fps', 'fourcc', 'width', 'height',\n",
-    "                  'video_output_options', 'online_viewer'\n",
-    "                 ]\n",
+    "default_settings = dict(\n",
+    "    t_start        = 0,     # Time at which to start tracking, in seconds.\n",
+    "    t_end          = -1,    # Time at which to end tracking, in seconds.\n",
+    "    \n",
+    "    # Background subtraction (for naive background subtraction only).\n",
+    "    bkg_frame_skip = 100,   # Using every frame of the video to compute the background takes a while.\n",
+    "                            # Instead we only use one frame in bkg_frame_skip.\n",
+    "    bkg_sub_amp    = 4,     # Contrast amplification factor applied after background subtraction.\n",
+    "    \n",
+    "    # Contour detection.\n",
+    "    n_pixel_blur   =  7,    # square-root of n-pixels for threshold blurring\n",
+    "    block_size     = 15,    # contour block size\n",
+    "    thresh_offset  = 15,    # threshold offset for contour-finding\n",
+    "    min_area       = 25,    # minimum area for threhold detection\n",
+    "    max_area       = 60,    # maximum area for threhold detection\n",
+    "    RGB            = False, # track in color, false does greyscale\n",
+    "    online_viewer  = False, # Toggle live preview of tracking.\n",
     "\n",
+    "    # What information to draw on the tracking output video.\n",
+    "    video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "                                contour_color=(0,200,255), contour_thickness=1, \n",
+    "                                points=False, directors=True, timestamp=True)\n",
+    "    )\n",
     "\n",
-    "tank_diameter_vs_age = { 7:0.96, 14:1.04, 21:1.28, 28:1.77, 42:3.38 }\n",
+    "settings_list = list(default_settings.keys()) + \\\n",
+    "                ['input_file', 'tracking_dir', 'output_dir', 'trial_file',  \n",
+    "                 'new_input_file', 'bkg_file', 'tank_file', 'settings_file', \n",
+    "                 'tank_radius', 'ext', 'filename', 'pop', 'age', 'group', 'Nfish', \n",
+    "                 'Nframes', 'fps', 'fourcc', 'width', 'height']\n",
     "\n",
-    "\n",
-    "def create_settings_(input_file,tracking_dir, \n",
-    "                     settings_list=settings_list, \n",
-    "                     tank_diameter_vs_age=tank_diameter_vs_age):\n",
-    "\n",
+    "def create_settings_(input_file, tracking_dir, settings):\n",
+    "    \n",
+    "    globals().update(settings)\n",
+    "    tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:33.8 }\n",
+    "    \n",
     "    ''' Extract trial info from the filename and the video itself. '''\n",
     "\n",
     "    filename,ext = os.path.splitext(os.path.basename(input_file))\n",
-    "    pop,_,age,group,Nfish,date = filename.split('_')\n",
-    "    \n",
-    "    \n",
-    "    pop,_,age,group,Nfish,date = filename.split('_')\n",
+    "    pop,_,age,group,Nfish,_ = filename.split('_')\n",
     "    Nfish    = int(re.findall('\\d+',Nfish)[0])\n",
-    "    date     = ''.join(date.split('-')[:3])\n",
-    "    \n",
-    "    tank_radius = tank_diameter_vs_age[int(age[:-3])]/2\n",
+    "    age      = int(age[:-3])\n",
+    "    tank_radius = tank_diameter_vs_age[age]/2\n",
     "\n",
     "    cap      = cv2.VideoCapture(input_file)\n",
     "    cap.read()\n",
@@ -62,67 +72,44 @@
     "    width    = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "    height   = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "    cap.release()\n",
-    "\n",
-    "    ''' Set default tracking parameters. '''\n",
-    "\n",
-    "    # By default only track 10 seconds 1 minute in.\n",
-    "    t_start,t_end  = 0,-1  # Times between which to track, in seconds.\n",
-    "\n",
-    "    # Background subtraction (for naive background subtraction only).\n",
-    "    bkg_frame_skip = 100   # Using every frame of the video to compute the background takes a while.\n",
-    "                           # Instead we only use one frame in bkg_frame_skip.\n",
-    "    bkg_sub_amp    = 4     # Contrast amplification factor applied after background subtraction.\n",
-    "\n",
-    "    # Contour detection.\n",
-    "    n_pixel_blur   =  7    # square-root of n-pixels for threshold blurring\n",
-    "    block_size     = 15    # contour block size\n",
-    "    thresh_offset  = 15    # threshold offset for contour-finding\n",
-    "    min_area       = 25    # minimum area for threhold detection\n",
-    "    max_area       = 60    # maximum area for threhold detection\n",
-    "    RGB            = False # track in color, false does greyscale\n",
-    "    online_viewer  = False # Toggle live preview of tracking.\n",
-    "\n",
-    "    # Decide what information to draw on the tracking output video.\n",
-    "    video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
-    "                                contour_color=(0,200,255), contour_thickness=1, \n",
-    "                                points=False, directors=True, timestamp=True)\n",
     "    \n",
     "    ''' Define and create necessary folders/files/links. '''\n",
     "    \n",
-    "    if not os.path.exists(tracking_dir):\n",
-    "        os.mkdir(tracking_dir)\n",
-    "\n",
     "    output_dir = join(tracking_dir,filename)\n",
-    "    if not os.path.exists(output_dir):\n",
-    "        os.mkdir(output_dir)\n",
     "\n",
     "    new_input_file = input_file\n",
     "    if not 'windows' in platform.system().lower():\n",
     "        new_input_file = join(output_dir,'raw'+ext)\n",
-    "        if not os.path.exists(new_input_file):\n",
-    "            os.symlink(os.path.relpath(input_file,output_dir),new_input_file)\n",
-    "\n",
+    "    \n",
     "    settings_file = join(output_dir,'tracking_settings.txt')\n",
-    "    tank_file = join(output_dir,'tank.pik')\n",
-    "    bkg_file  = join(output_dir,f'background-{bkg_frame_skip}.npy')\n",
+    "    trial_file    = join(output_dir,'trial.pik')\n",
+    "    tank_file     = join(output_dir,'tank.pik')\n",
+    "    bkg_file      = join(output_dir,f'background-{bkg_frame_skip}.npy')\n",
     "    \n",
-    "    \n",
-    "    # The list comprehension version fails to find 'new_input_file'.\n",
-    "    # The explicit loop version works. I have no idea why.\n",
-    "#     settings  = { k:locals()[k] for k in settings_list }\n",
-    "    settings = {}\n",
-    "    for k in settings_list:\n",
-    "        settings[k] = locals()[k]\n",
-    "    \n",
+    "    for k,v in locals().items():\n",
+    "        if k not in ['cap','settings','tank_diameter_vs_age','_']:\n",
+    "            settings[k] = v\n",
+    "        \n",
     "    return settings\n",
     "\n",
     "\n",
-    "''' Prepare a one-step settings saving function to run right before tracking. '''\n",
+    "def create_directories(settings):\n",
+    "    for k in 'tracking_dir','output_dir','input_file','new_input_file':\n",
+    "        globals()[k] = settings[k]\n",
+    "    if not os.path.exists(tracking_dir):\n",
+    "        os.mkdir(tracking_dir)\n",
+    "    if not os.path.exists(output_dir):\n",
+    "        os.mkdir(output_dir)\n",
+    "    if not 'windows' in platform.system().lower():\n",
+    "        if not os.path.exists(new_input_file):\n",
+    "            os.symlink(os.path.relpath(input_file,output_dir),new_input_file)\n",
+    "    return\n",
     "\n",
-    "def save_settings():\n",
-    "    with open(settings_file,'w') as fh:\n",
-    "        for k in settings_list:\n",
-    "            print(f'{k} = {globals()[k]}',file=fh)\n",
+    "\n",
+    "def save_settings(settings):\n",
+    "    with open(settings['settings_file'],'w') as fh:\n",
+    "        for k,v in settings.items():\n",
+    "            print(f'{k} = {v}',file=fh)\n",
     "    return"
    ]
   },
@@ -145,10 +132,42 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_30FPS-0000.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupB_n2_-0000-0000.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupB_n2b_0000.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupC_n2_-0000-0000.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupD_n2_-0000-0000.avi\n",
+      "../raw_videos/Pa_Fri_14dpf_GroupD_n2b_-0000.avi\n",
+      "../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
+      "../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
+      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+      "../raw_videos/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
+      "../raw_videos/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n2b_2020-06-13-110452-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n1_2020-06-13-131011-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n1b_2020-06-13-152250-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n2b_2020-06-13-125525-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupB_n5_2020-06-13-095516-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupC_n1a_2020-06-13-122237-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupC_n1b_2020-06-13-142257-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupC_n2a_2020-06-13-144626-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupC_n2b_2020-06-13-134638-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupC_n5_2020-06-13-114616-0000.avi\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi']"
+       "['../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi']"
       ]
      },
      "metadata": {},
@@ -156,18 +175,37 @@
     }
    ],
    "source": [
-    "tracking_dir = '../tracking/full'\n",
+    "tracking_dir = '../tracking/partial'\n",
+    "\n",
+    "def create_settings(input_file,tracking_dir=tracking_dir,settings=default_settings):\n",
+    "    return create_settings_(input_file,tracking_dir,settings)\n",
     "\n",
     "n_threads = None\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/*_*_7dpf_*.avi'))\n",
+    "input_files = []\n",
+    "for f in sorted(glob('../raw_videos/*.avi')):\n",
+    "    print(f)\n",
+    "    settings = create_settings(f)\n",
+    "    if not os.path.exists(settings['trial_file']):\n",
+    "        input_files.append(f)\n",
+    "\n",
+    "input_files = input_files[:1]\n",
     "display(input_files)\n",
     "\n",
-    "#-----\n",
-    "\n",
-    "create_settings = lambda input_file: create_settings_(input_file,tracking_dir=tracking_dir)"
+    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi']\n",
+    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
+    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi']\n",
+    "# input_files = ['../raw_videos/broken/Pa_Fri_14dpf_groupA_n5_15FPS.avi']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -178,28 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi\n",
-      "\n",
-      "        Tank object loaded from ../tracking/partial/Pa_Fri_14dpf_GroupA_n2_15FPS/tank.pik \n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi\n",
-      "\n",
-      "        Tank object loaded from ../tracking/partial/Pa_Fri_14dpf_GroupA_n2b_15FPS/tank.pik \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for input_file in input_files:\n",
     "    print(input_file)\n",
     "    settings = create_settings(input_file)\n",
+    "    create_directories(settings)\n",
     "    globals().update(settings)\n",
     "    tank = Tank(r_cm=tank_radius)\n",
     "    tank.load_or_locate_and_save(tank_file,input_file)"
@@ -216,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,19 +281,16 @@
     "    plt.imshow(bkg.astype(np.uint))\n",
     "    plt.savefig(join(output_dir,'background.png'),dpi=150)\n",
     "#     plt.show()\n",
-    "    plt.clf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.clf()\n",
+    "\n",
+    "#---------------------------------------------------\n",
+    "\n",
     "# # Single thread version.\n",
     "# for f in input_files:\n",
     "#     settings = create_settings(f)\n",
     "#     compute_background(settings)\n",
+    "\n",
+    "#----\n",
     "\n",
     "# Multithread version.\n",
     "with multiprocessing.Pool(n_threads) as pool:\n",
@@ -283,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def track(settings):\n",
     "    \n",
+    "    save_settings(settings)\n",
     "    globals().update(settings)\n",
-    "    save_settings()\n",
     "    \n",
     "    trial = Trial()\n",
-    "    trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "    trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, \n",
     "               fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "    cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
@@ -321,81 +344,30 @@
     "        cvt.trial.save()\n",
     "    except:\n",
     "        %tb\n",
-    "        cvt.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi',\n",
-       " '../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(input_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi\n",
-      "\n",
-      "        Generating new Trial object.\n",
-      "\n",
-      "        Tank object loaded from ../tracking/partial/Pa_Fri_14dpf_GroupA_n2b_15FPS/tank.pik \n",
-      "2 individuals in trial\n",
-      "\n",
-      "        Generating new Trial object.\n",
-      "\n",
-      "        Tank object loaded from ../tracking/partial/Pa_Fri_14dpf_GroupA_n2_15FPS/tank.pik \n",
-      "2 individuals in trial\n",
-      "15\n",
-      "Using Gaussian Adaptive Threshold\n",
-      "Using Inverted Binary Threshold with [0, 100].\n",
-      " Group of 2\n",
-      "15\n",
-      "Using Gaussian Adaptive Threshold\n",
-      "Using Inverted Binary Threshold with [0, 100].\n",
-      " Group of 2\n",
-      "       Current tracking time: 00:00:10:10 \n",
-      "       Video capture released.\n",
-      "\n",
-      "        Trial object saved as ../tracking/partial/Pa_Fri_14dpf_GroupA_n2b_15FPS/trial.pik \n",
-      "       Current tracking time: 00:00:10:03 \n",
-      "       Video capture released.\n",
-      "\n",
-      "        Trial object saved as ../tracking/partial/Pa_Fri_14dpf_GroupA_n2_15FPS/trial.pik \n"
-     ]
-    }
-   ],
-   "source": [
+    "        cvt.release()\n",
+    "    \n",
+    "    return\n",
+    "\n",
+    "#---------------------------------------------------\n",
+    "\n",
+    "tweaks = dict(t_start = 60, t_end = 70)\n",
+    "\n",
+    "#---------------------------------------------------\n",
+    "\n",
     "# # Single thread version.\n",
     "# for f in input_files:\n",
     "#     print(input_file)\n",
     "#     settings = create_settings(f)\n",
     "#     track(settings)\n",
     "\n",
-    "# Multi thread version.\n",
+    "#----\n",
+    "\n",
+    "# Multithread version.\n",
     "def task(input_file):\n",
     "    print(input_file)\n",
     "    sys.stdout.flush()\n",
     "    settings = create_settings(input_file)\n",
+    "    settings.update(tweaks)\n",
     "    track(settings)\n",
     "\n",
     "with multiprocessing.Pool(n_threads) as pool:\n",
@@ -404,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
