- In "Track_Batch.ipynb" the default number of threads is now 1, and setting n_threads to 1 bypasses multiprocessing entirely. This is because multiprocessing doesn't work in windows (at least not the way I'm using it). It looks like a related module called "multiprocess" may be able to fix this issue.
- This is likely the last commit before a major revision of (1) the way missing fish are handled and (2) the core data layout.

--- a/Track_Batch.ipynb
+++ b/Track_Batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    block_size     = 15,    # contour block size\n",
     "    thresh_offset  = 15,    # threshold offset for contour-finding\n",
     "    min_area       = 25,    # minimum area for threhold detection\n",
-    "    max_area       = 60,    # maximum area for threhold detection\n",
+    "    max_area       = 100,   # maximum area for threhold detection\n",
     "    RGB            = False, # track in color, false does greyscale\n",
     "    online_viewer  = False, # Toggle live preview of tracking.\n",
     "\n",
@@ -128,84 +128,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_15FPS.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupA_n2b_30FPS-0000.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupB_n2_-0000-0000.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupB_n2b_0000.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupC_n2_-0000-0000.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupD_n2_-0000-0000.avi\n",
-      "../raw_videos/Pa_Fri_14dpf_GroupD_n2b_-0000.avi\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
-      "../raw_videos/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupA_n2b_2020-06-13-110452-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupB_n1_2020-06-13-131011-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupB_n1b_2020-06-13-152250-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupB_n2b_2020-06-13-125525-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupB_n5_2020-06-13-095516-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupC_n1a_2020-06-13-122237-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupC_n1b_2020-06-13-142257-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupC_n2a_2020-06-13-144626-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupC_n2b_2020-06-13-134638-0000.avi\n",
-      "../raw_videos/SF_Sat_14dpf_GroupC_n5_2020-06-13-114616-0000.avi\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['../raw_videos/Pa_Fri_14dpf_GroupA_n2_15FPS.avi']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tracking_dir = '../tracking/partial'\n",
+    "# tracking_dir = '../tracking/full' # use this one to track full videos\n",
+    "tracking_dir = '../tracking/partial' # use this one to track small excerpts\n",
     "\n",
     "def create_settings(input_file,tracking_dir=tracking_dir,settings=default_settings):\n",
     "    return create_settings_(input_file,tracking_dir,settings)\n",
     "\n",
-    "n_threads = None\n",
+    "n_threads = 1 # Note: multithreading as currently implemented doesn't work in Windows.\n",
     "\n",
     "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/*_*_7dpf_*.avi'))\n",
-    "input_files = []\n",
-    "for f in sorted(glob('../raw_videos/*.avi')):\n",
-    "    print(f)\n",
-    "    settings = create_settings(f)\n",
-    "    if not os.path.exists(settings['trial_file']):\n",
-    "        input_files.append(f)\n",
     "\n",
-    "input_files = input_files[:1]\n",
-    "display(input_files)\n",
+    "# input_files = []\n",
+    "# for f in sorted(glob('../raw_videos/*.avi')):\n",
+    "#     print(f)\n",
+    "#     settings = create_settings(f)\n",
+    "#     if not os.path.exists(settings['trial_file']):\n",
+    "#         input_files.append(f)\n",
+    "# display(input_files)\n",
     "\n",
-    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupA_n1_2020-06-13-110945-0000.avi']\n",
-    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
-    "# input_files = ['../raw_videos/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi']\n",
-    "# input_files = ['../raw_videos/broken/Pa_Fri_14dpf_groupA_n5_15FPS.avi']"
+    "input_files = ['../raw_videos/test/Pa_Fri_14dpf_GroupA_n2b_15FPS__0-60.avi']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -285,16 +232,18 @@
     "\n",
     "#---------------------------------------------------\n",
     "\n",
-    "# # Single thread version.\n",
-    "# for f in input_files:\n",
-    "#     settings = create_settings(f)\n",
-    "#     compute_background(settings)\n",
+    "if n_threads==1:\n",
+    "    \n",
+    "    # Single thread version.\n",
+    "    for f in input_files:\n",
+    "        settings = create_settings(f)\n",
+    "        compute_background(settings)\n",
     "\n",
-    "#----\n",
+    "else:\n",
     "\n",
-    "# Multithread version.\n",
-    "with multiprocessing.Pool(n_threads) as pool:\n",
-    "    pool.map(compute_background,[create_settings(f) for f in input_files])"
+    "    # Multithread version.\n",
+    "    with multiprocessing.Pool(n_threads) as pool:\n",
+    "        pool.map(compute_background,[create_settings(f) for f in input_files])"
    ]
   },
   {
@@ -320,8 +269,8 @@
     "               fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "    cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "                   threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
-    "                   online=online_viewer)\n",
+    "                   threshold_offset=thresh_offset, min_area=min_area, max_area=max_area, \n",
+    "                   RGB=True, online=online_viewer)\n",
     "    \n",
     "    bkg = np.load(bkg_file)\n",
     "    \n",
@@ -354,24 +303,26 @@
     "\n",
     "#---------------------------------------------------\n",
     "\n",
-    "# # Single thread version.\n",
-    "# for f in input_files:\n",
-    "#     print(input_file)\n",
-    "#     settings = create_settings(f)\n",
-    "#     track(settings)\n",
+    "if n_threads==1:\n",
+    "    \n",
+    "    # Single thread version.\n",
+    "    for f in input_files:\n",
+    "        print(input_file)\n",
+    "        settings = create_settings(f)\n",
+    "        track(settings)\n",
     "\n",
-    "#----\n",
+    "else:\n",
     "\n",
-    "# Multithread version.\n",
-    "def task(input_file):\n",
-    "    print(input_file)\n",
-    "    sys.stdout.flush()\n",
-    "    settings = create_settings(input_file)\n",
-    "    settings.update(tweaks)\n",
-    "    track(settings)\n",
+    "    # Multithread version.\n",
+    "    def task(input_file):\n",
+    "        print(input_file)\n",
+    "        sys.stdout.flush()\n",
+    "        settings = create_settings(input_file)\n",
+    "        settings.update(tweaks)\n",
+    "        track(settings)\n",
     "\n",
-    "with multiprocessing.Pool(n_threads) as pool:\n",
-    "    pool.map(task,input_files)"
+    "    with multiprocessing.Pool(n_threads) as pool:\n",
+    "        pool.map(task,input_files)"
    ]
   },
   {
