- Tracker.py: Reversing the orientation now requires 5 consecutives frames of motion against the orientation by more than reversal_threshold pixels per frame. Also once the reversal is triggered the last 5 frames are reversed as well.
- Tracker.py: Tank masking now sets the outside of the tank to white (instead of black) when using inverse thresholding. I was concerned the black background was messing up the adaptive thresholding near the edge by driving down the average brightness around the shape to be detected.

- Tracker.py: When tracking the first frame, the third moments of each contour are now used to guess the front of the fish. After that it's back to using frame-to-frame continuity and direction of motion.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,8 @@
     "    max_area       = 100,   # maximum area for detection\n",
     "    max_aspect     = 10,    # maximum aspect ratio for detection\n",
     "    area_penalty   = 1,     # weight of area change when connecting fish across frames\n",
+    "    reversal_threshold = None, # average frame-to-frame displacement against the director \n",
+    "                            # over the last few frames to trigger a reversal. \n",
     "    RGB            = True,  # track in color, false does greyscale\n",
     "    online_viewer  = False, # Toggle live preview of tracking.\n",
     "\n",
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']"
+       "['../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']"
       ]
      },
      "metadata": {},
@@ -161,7 +163,8 @@
     "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_*.avi'))\n",
     "# input_files = sorted(glob('../raw_videos/testing_snippets/*_60-120.avi'))\n",
-    "input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
+    "input_files = ['../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
     "\n",
     "# input_files = []\n",
     "# for f in sorted(glob('../raw_videos/*.avi')):\n",
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -195,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n"
+      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n"
      ]
     }
    ],
@@ -218,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+      "\n",
+      "       Current tracking time: 00:01:09:70 \n",
+      "       Video capture released.\n"
+     ]
+    }
+   ],
    "source": [
     "import cvt\n",
     "reload(cvt.utils)\n",
@@ -228,38 +242,23 @@
     "reload(cvt.TrAQ.Tank)\n",
     "from cvt.TrAQ.Tank import Tank\n",
     "reload(cvt.TrAQ.Tracker)\n",
-    "from cvt.TrAQ.Tracker import Tracker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
-      "\n",
-      "       Current tracking time: 00:01:10:00 \n",
-      "       Video capture released.\n"
-     ]
-    }
-   ],
-   "source": [
+    "from cvt.TrAQ.Tracker import Tracker\n",
+    "\n",
+    "\n",
     "# tweaks = dict(t_start = 4, t_end = 5,\n",
-    "tweaks = dict(t_start = 65, t_end = 70,\n",
+    "tweaks = dict(t_start = 30, t_end = 70,\n",
     "# tweaks = dict(t_start = 0, t_end = -1,\n",
     "              n_pixel_blur   =  5,    # square-root of n-pixels for threshold blurring\n",
     "              block_size     = 15,    # contour block size\n",
-    "              thresh_offset  = 13,    # threshold offset for contour-finding\n",
-    "              min_area       = 20,    # minimum area for detection\n",
-    "              max_area       = 100,   # maximum area for detection\n",
+    "              thresh_offset  = 10,    # threshold offset for contour-finding\n",
+    "              min_area       = 30,    # minimum area for detection\n",
+    "              max_area       = 150,   # maximum area for detection\n",
     "              max_aspect     = 10,    # maximum aspect ratio for detection\n",
     "              area_penalty   = 0.5,   # weight of area change when connecting fish across frames\n",
+    "              reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
+    "                                      # over the last few frames to trigger a reversal. \n",
     "              online_viewer  = False, \n",
-    "              video_output_options = dict( tank=False, points=False, directors=True, timestamp=True, \n",
+    "              video_output_options = dict( tank=True, points=False, directors=True, timestamp=True, \n",
     "                                           contours=True, contour_color=(0,0,255), contour_thickness=1 ),\n",
     "                                           # Note: There's no point drawing the tank since we're masking\n",
     "                                           # everything outside the tank anyway.\n",
@@ -274,11 +273,13 @@
     "    # save_settings(settings)\n",
     "    globals().update(settings)\n",
     "\n",
-    "    tracker = Tracker( input_video=new_input_file, output_dir=output_dir, n_ind=Nfish, \n",
-    "                       t_start=t_start, t_end=t_end, \n",
+    "    tracker = Tracker( input_video=new_input_file, output_dir=output_dir, \n",
+    "                       n_ind=Nfish, t_start=t_start, t_end=t_end, \n",
     "                       n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "                       threshold_offset=thresh_offset, min_area=min_area, max_area=max_area, \n",
+    "                       threshold_offset=thresh_offset, \n",
+    "                       min_area=min_area, max_area=max_area, \n",
     "                       max_aspect=max_aspect, area_penalty=area_penalty, \n",
+    "                       reversal_threshold=reversal_threshold, \n",
     "                       bkgSub_options=bkgSub_options, RGB=True, live_preview=online_viewer)\n",
     "\n",
     "    tracker.save_settings()\n",
@@ -317,7 +318,8 @@
     "                tracker.write_frame()\n",
     "                if not tracker.post_frame(delay=1):\n",
     "                    break\n",
-    "                tracker.print_current_frame()\n",
+    "                if i_frame%10==0:\n",
+    "                    tracker.print_current_frame()\n",
     "        tracker.release()\n",
     "    except:\n",
     "        tracker.release()\n",
@@ -340,6 +342,13 @@
     "    pool = multiprocessing.Pool(n_threads)\n",
     "    pool.map(track,input_files)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,6 +393,23 @@
     "    plt.gca().yaxis.set_inverted(True)\n",
     "    plt.legend()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df[4].values[:5,:3])\n",
+    "\n",
+    "x = df[4].values[:,0]\n",
+    "y = df[4].values[:,1]\n",
+    "a = df[4].values[:,2]\n",
+    "\n",
+    "dot = (x[1:]-x[:-1])*np.cos(a[:-1]) + (y[1:]-y[:-1])*np.sin(a[:-1])\n",
+    "print(dot)\n",
+    "print(np.mean(dot))"
    ]
   },
   {
